--- a/PoliklinikaDesktop/Properties/Resources.resx
+++ b/PoliklinikaDesktop/Properties/Resources.resx
@@ -148,6 +148,9 @@
   <data name="sestrica1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sestrica1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ValidacijaPolja" xml:space="preserve">
+    <value>Obavezno polje</value>
+  </data>
   <data name="ZAPOSLENICI" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ZAPOSLENICI.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
