--- a/PoliklinikaDesktop/Properties/Resources.resx
+++ b/PoliklinikaDesktop/Properties/Resources.resx
@@ -139,6 +139,9 @@
   <data name="odjeli1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\odjeli1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="poruke" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\poruke.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="poslovne3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\poslovne3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
